--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ html {
 }
 
 /* COLORS */
+.fab {
+    margin: 2%;
+}
 
 .fa-linkedin-in {
     color: rgb(10, 102, 194);
@@ -33,19 +36,19 @@ html {
 .fa-js-square {
     color: rgb(239, 216, 29);
     
-    
 }
 
 .fa-html5 {
     color: rgb(244, 71, 11);
+    
 }
 
 .fa-node-js {
-color: rgb(104, 159, 99);
+    color: rgb(104, 159, 99);
 }
 
 .fa-bootstrap {
-color: rgb(121, 82, 179);
+    color: rgb(121, 82, 179);
 }
 
 #email-link {
@@ -60,18 +63,16 @@ h1, h2, h3 {
     font-size: 2.3rem;
 }
 
-p{
+p {
     text-align: center;
     font-size: 1.6rem;
 }
 
-
-li, span{
+li, span {
     font-size: 1.4rem;
 }
 
 a {
-    
     text-decoration: none;
     color: black;
 }
@@ -87,13 +88,15 @@ a {
 
 /* SECTION STYLING */
 
-body {
-    background-color: rgb(239, 247, 248);
-}
+/* body {
+     background-color: rgb(239, 247, 248); 
+} */
 
 main {
     width: 90%;
-    margin: 0 5%;
+    max-width: 1400px;
+    
+    margin: 0 auto;
 }
 
 header {
@@ -162,7 +165,6 @@ header ul>li {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    
 }
 
 .links a {
@@ -176,21 +178,22 @@ header ul>li {
 #project-grid {
     display: grid;
     width: 90%;
-    height: 150vh;
+    height: 100vh;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     row-gap: 2%;
     column-gap: 2%;
 }
 
 .project-box {
     border: 1px solid black;
-    background-image: url('https://fhntoday.com/wp-content/uploads/2019/02/shutterstock_765697834-900x600.jpg');
+    
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .skill-icons {
+
     font-size: 3.5rem;
 }
 
@@ -217,7 +220,6 @@ header ul>li {
 }
 
 .contact-paragraph {
-    
     font-weight: 600;
     margin-top: 5%;
 }
@@ -246,13 +248,18 @@ footer>* {
 
 #other-skills li {
     list-style: none;
-    
     font-weight: 700;
 }
 
 @media screen and (min-width: 600px) {
+    /* main {
+         background-color: rgba(205, 220, 248, 0.589); 
+        border-left: 2px solid gray;
+        border-right: 2px solid gray;
+    } */
     main>section {
         padding-top: 3%;
+        
     }
     p, li, ul, span {
         font-size: 2rem;
@@ -284,6 +291,10 @@ footer>* {
         display: flex;
         justify-content: center;
         font-size: 4rem;
+        
+    }
+    #about{
+        margin: 10% auto 20% auto;
     }
     #about>* {
         margin-top: 5%;
@@ -297,26 +308,34 @@ footer>* {
     #project-grid {
         display: grid;
         width: 90%;
-        height: 100vh;
+        height: 50vh;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr;
         row-gap: 2%;
         column-gap: 2%;
     }
     .project-box {
         border: 1px solid black;
-        background-image: url('https://fhntoday.com/wp-content/uploads/2019/02/shutterstock_765697834-900x600.jpg');
+        border-radius: 10px;
         background-size: cover;
         background-repeat: no-repeat;
+    }
+    #skills {
+        background-color: rgb(239, 247, 248);
+        border: 2px solid black;
+        border-radius: 10px;
+        padding: 5%;
+        width: 80%;
+        margin: 5% auto;
     }
     #skills>* {
         margin-top: 5%;
     }
     .skill-icons {
         font-size: 6rem;
-        width: 30%;
+        width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
     }
     #contact {
         padding: 10% 0 0 0;
