--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,6 @@ a {
     font-family: 'Poppins', sans-serif;
 }
 
-/* SECTION STYLING */
-
-/* body {
-     background-color: rgb(239, 247, 248); 
-} */
-
 main {
     width: 90%;
     max-width: 1400px;
@@ -145,7 +139,7 @@ nav {
 /* ****** MOBILE FIRST ****** */
 
 main>section {
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 header ul {
@@ -191,11 +185,15 @@ header ul>li {
     background-size: cover;
     background-repeat: no-repeat;
 }
-
+.skill-icons > i {
+    margin: 7%;
+}
 .skill-icons {
-
+    display: flex;
+    justify-content: center;
     font-size: 3.5rem;
 }
+
 
 #contact {
     width: fit-content;
@@ -294,7 +292,7 @@ footer>* {
         
     }
     #about{
-        margin: 10% auto 20% auto;
+        margin: 10% auto 0% auto;
     }
     #about>* {
         margin-top: 5%;
@@ -321,16 +319,14 @@ footer>* {
         background-repeat: no-repeat;
     }
     #skills {
-        background-color: rgb(239, 247, 248);
-        border: 2px solid black;
         border-radius: 10px;
         padding: 5%;
         width: 80%;
-        margin: 5% auto;
+        margin: 5% auto 0 auto;
     }
-    #skills>* {
-        margin-top: 5%;
-    }
+    .skill-icons > i {
+    margin: 3%;
+}
     .skill-icons {
         font-size: 6rem;
         width: 100%;
