--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,27 @@
 
 html {
   font-size: 62.5%;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
+}
+
+body,
+html {
+  width: 100%;
+}
+
+body {
+  background: rgb(247, 243, 230);
+}
+
+#intro,
+#about,
+#skills,
+#projects {
+  border-bottom: 3px solid rgba(128, 128, 128, 0.397);
+  border-radius: 20px;
+  padding-bottom: 5rem;
+  margin: 10% auto 0 auto;
 }
 
 /* COLORS */
@@ -49,6 +68,17 @@ html {
   color: rgb(121, 82, 179);
 }
 
+.mongo-icon {
+  width: 3rem;
+}
+
+/* .next-icon {
+  width: 2rem;
+} */
+
+/* .next-icon svg {
+  width: 100%;
+} */
 #email-link {
   color: blue;
 }
@@ -58,7 +88,7 @@ html {
 h1,
 h2,
 h3 {
-  font-family: "Recursive", sans-serif;
+  font-family: 'Recursive', sans-serif;
   font-weight: 700;
   font-size: 2.3rem;
 }
@@ -78,13 +108,17 @@ a {
   color: black;
 }
 
+.project-box a {
+  color: rgb(0, 110, 255);
+}
+
 #other-skills li::before {
-  content: "-";
+  content: '-';
   display: inline-block;
 }
 
 ::placeholder {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 main {
@@ -95,7 +129,7 @@ main {
 }
 
 header {
-  background-color: rgba(255, 255, 255, 0.37);
+  background: rgb(247, 241, 221);
   border-bottom: 1px solid rgb(122, 122, 122);
   height: 5vh;
   position: fixed;
@@ -110,6 +144,10 @@ nav {
 
 #intro > * {
   margin-top: 5%;
+}
+
+#intro h1 {
+  margin-top: 10%;
 }
 
 /* BASIC FLEX */
@@ -178,21 +216,24 @@ header ul > li {
 .skill-icons {
   display: flex;
   justify-content: center;
-  font-size: 3.5rem;
+  flex-wrap: wrap;
+  font-size: 5rem;
 }
 #project-grid {
   display: grid;
   width: 90%;
-  height: 150vh;
+  height: auto;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   row-gap: 2%;
   column-gap: 2%;
 }
 
 .project-box {
   border: 1px solid black;
-  overflow: hidden;
+  border-radius: 4px;
+  box-shadow: 0 0 3px rgb(90, 90, 90);
+
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -203,29 +244,58 @@ header ul > li {
   background-size: 100% auto;
 }
 #mush {
-  background-image: url("https://p42.f3.n0.cdn.getcloudapp.com/items/v1uYGxWY/05073f96-7aa0-48d2-af4a-1229d349dbd3.gif?source=viewer&v=840f36f19cc9d3b45a37ef3ebbcd4ea5");
+  background-image: url('https://p42.f3.n0.cdn.getcloudapp.com/items/v1uYGxWY/05073f96-7aa0-48d2-af4a-1229d349dbd3.gif?source=viewer&v=840f36f19cc9d3b45a37ef3ebbcd4ea5');
 }
 #giorgia {
-  background-image: url("https://p42.f3.n0.cdn.getcloudapp.com/items/qGu54J0v/126e1481-7c59-47eb-84d8-82fccdd4fac3.gif?source=viewer&v=4066e6df4f0c523db4c703938c3663a6");
+  background-image: url('https://p42.f3.n0.cdn.getcloudapp.com/items/qGu54J0v/126e1481-7c59-47eb-84d8-82fccdd4fac3.gif?source=viewer&v=4066e6df4f0c523db4c703938c3663a6');
 }
 #penguin {
-  background-image: url("https://p42.f3.n0.cdn.getcloudapp.com/items/o0uelnr1/66a90245-7aa4-48a2-aa2a-55440c513760.gif?v=9a803ddf75779d52b3da7581c9addc41");
+  background-image: url('https://p42.f3.n0.cdn.getcloudapp.com/items/o0uelnr1/66a90245-7aa4-48a2-aa2a-55440c513760.gif?v=9a803ddf75779d52b3da7581c9addc41');
 }
 .project-info {
-  height: 50%;
   display: flex;
   flex-direction: column;
+  padding: 5%;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  min-height: 100%;
+  height: fit-content;
 }
+
+.project-info > div {
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+}
+
+.project-info ul {
+  width: 100%;
+}
+
+.project-info > div > * {
+  padding: 1% 0;
+}
+
 .project-info a:hover {
   text-decoration: underline;
 }
 .project-info .skill-icons li {
   list-style: none;
   font-size: 3.5rem;
+  height: 3.5rem;
   margin: 0 2%;
 }
+
+.project-info li .mongo-icon {
+  width: 2rem;
+}
+/* 
+.project-info li .next-icon {
+  width: 2rem;
+} */
 
 #contact {
   width: fit-content;
@@ -288,6 +358,10 @@ footer > * {
         border-left: 2px solid gray;
         border-right: 2px solid gray;
     } */
+
+  #intro {
+    margin-top: 0;
+  }
   main > section {
     padding-top: 3%;
   }
@@ -340,7 +414,7 @@ footer > * {
   #project-grid {
     display: grid;
     width: 90%;
-    height: 100vh;
+    height: fit-content;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     row-gap: 2%;
@@ -351,6 +425,7 @@ footer > * {
     border-radius: 10px;
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100%;
   }
   .project-box p,
   .project-box a {
@@ -358,17 +433,23 @@ footer > * {
   }
   #skills {
     border-radius: 10px;
-    padding: 5%;
+
     width: 80%;
-    margin: 5% auto 0 auto;
+    margin: 10% auto 10% auto;
   }
+  #skills h2 {
+    margin-top: 7rem;
+  }
+
   .skill-icons > i {
     margin: 3%;
   }
+
   .skill-icons {
-    font-size: 6rem;
+    font-size: 5rem;
     width: 100%;
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
   }
   #contact {
